added fancy button

--- a/index.html
+++ b/index.html
@@ -5,3 +5,22 @@
 
 </head>
 </html>
+
+
+
+<!--cool button
+<script 
+    type="text/javascript"
+    src="//cdnjs.cloudfare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"
+
+
+
+<button>
+    <div>
+    A beautiful button
+    </div>
+</button>
+</script>
+
+
+-->
