actually wrote UCS

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>DFS and UFS WebTutor</title>
+    <title>DFS and UCS WebTutor</title>
 
 </head>
 </html>
