--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>DFS and UCS WebTutor</title>
 
 </head>
+<body>
+    This is where we wrill write everythiong as well as have buttons to run DFS and UCS as well as visula representations of these things
+</body>
 </html>
 
 
